# Peanut-GB

./: .astylerc  .editorconfig  .gitignore  .lgtm.yml  BENCHMARK.md  CONTRIBUTING.md  Makefile  README.md  example.c  gameboy.h  peanut_gb.h  platform.c  version.all
.github/workflows/: cmake.yml  peanut-sdl.yml  tests.yml
examples/: Makefile  Makefile_cboy  audio.cpp  audio.h  gameboy_benchmark.c  gameboy_debug.c  gameboy_sdl.c  peanut_debug.c  peanut_sdl.c
examples/benchmark/: CMakeLists.txt  Makefile  gameboy_benchmark.c  gameboy_benchmark_prof.c  peanut-benchmark.c  peanut_benchmark.c  peanut_benchmark_prof.c  peanut_benchmark_rom.c  pgbobj.mak
examples/debug/: Makefile  peanut-debug-simple.c  peanut-debug.c  peanut_debug.c
examples/debug-nuklear/: .gitignore  CMakeLists.txt  Makefile
examples/debug-nuklear/inc/: nuklear.h  nuklear_proj.h  nuklear_sdl_renderer.h
examples/debug-nuklear/src/: main.c  nuklear.c  overview.c
examples/fenster/: Makefile  peanut_fenster.c
examples/gb_apu/: Makefile
examples/glfw/: CMakeLists.txt  Makefile  gb.c  gb.h  gl.c  gles2.c  main.c
examples/glfw/inc/: getticks.h
examples/glfw/inc/glad/: gl.h  gles2.h
examples/mini_fb/: Makefile  MiniFB.h  README.md  X11MiniFB.c  peanut_minifb.c
examples/old/: gameboy_debug.c
examples/sdl2/: CMakeLists.txt  Makefile  audio.cpp  audio.h  bmp.h  build_win.bat  gamecontrollerdb.txt  peanut_sdl.c
examples/sdl2/blargg_apu/: Basic_Gb_Apu.h  Blip_Buffer.cpp  audio.cpp  audio.h  blargg_common.h  blargg_source.h
examples/sdl2/blargg_apu_c/: Basic_Gb_Apu.c  Basic_Gb_Apu.h
examples/sdl2/gb_apu/: Blip_Buffer.h
examples/sdl2/meta/: winres.rc
examples/sdl2/minigb_apu/: make_lut.c  minigb_apu.c  minigb_apu.h
examples/sdl2/nativefiledialog/src/: nfd_win.cpp
examples/sdl2/peanut_apu/: peanut_apu.c  peanut_apu.h
examples/sdl2/tools/: sdl2_2-0-12_inc.cab  sdl2_2-0-12_x86.cab
examples/web/: index.html
screencaps/: README.md
test/: .gitignore  CMakeLists.txt  Makefile  cpu_instrs.h  dmg-acid2.gb.h  dmg_sound.gb.h  instr_timing.h  minctest.h  test.c  test_external_rom.c
