CMAKE_MINIMUM_REQUIRED(VERSION 3.12...3.24 FATAL_ERROR)

PROJECT(peanutgb-debugger)
ADD_EXECUTABLE(peanutgb-debugger src/main.c)
TARGET_INCLUDE_DIRECTORIES(peanutgb-debugger PRIVATE inc)

#sdl2
INCLUDE(CPM.cmake)
CPMADDPACKAGE(GITHUB_REPOSITORY libsdl-org/SDL
        NAME SDL2
        GIT_TAG release-2.0.20
        OPTIONS
        "SDL_SHARED_ENABLED_BY_DEFAULT OFF"
        "SDL_STATIC_ENABLED_BY_DEFAULT ON")
TARGET_LINK_LIBRARIES(peanutgb-debugger PRIVATE SDL2-static SDL2main)
ADD_COMPILE_DEFINITIONS(SDL_MAIN_HANDLED)
